+ aktualne, działające częściowo, błagam nie ruszać nie commitować