@@ -1,40 +1,33 @@
 package pl.kt.agh.edu.authentication.service.service;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
-import pl.kt.agh.edu.authentication.service.config.AuthenticationConfigProps;
 import pl.kt.agh.edu.authentication.service.dto.JwtDTO;
-import pl.kt.agh.edu.common.constant.UserApiPath;
-import pl.kt.agh.edu.common.exception.AuthenticationException;
-import pl.kt.agh.edu.common.util.JwtUtil;
+import pl.kt.agh.edu.authentication.service.entity.UserDetailsImpl;
 import pl.kt.agh.model.dto.UserAuthDTO;
 import pl.kt.agh.model.dto.UserCreateDTO;
 import pl.kt.agh.model.dto.UserDTO;
 
-import java.util.Collections;
+import javax.naming.AuthenticationException;
+import java.util.Map;
 
 @Service
+@RequiredArgsConstructor
 public class AuthenticationService {
-    private static final String CREATE_API = "https://user-service" + UserApiPath.USER_CREATE;
+    private static final String CREATE_API = "https://user-service" + "/user/create";
 
     private final RestTemplate restTemplate;
     private final PasswordEncoder passwordEncoder;
-    private final AuthenticationConfigProps configProps;
     private final AuthenticationManager authenticationManager;
+    private final JwtResolverExtService jwtResolverExtService;
 
-    public AuthenticationService(RestTemplate restTemplate, PasswordEncoder passwordEncoder, AuthenticationConfigProps configProps, AuthenticationManager authenticationManager) {
-        this.restTemplate = restTemplate;
-        this.passwordEncoder = passwordEncoder;
-        this.configProps = configProps;
-        this.authenticationManager = authenticationManager;
-    }
-
-    public void validateToken(String token) {
-        JwtUtil.validateToken(token, configProps.getSecret());
+    public boolean validateToken(String token) {
+        return jwtResolverExtService.isTokenValid(token);
     }
 
     public UserDTO registerUser(UserCreateDTO userCreateDTO) {
@@ -42,18 +35,18 @@ public class AuthenticationService {
         return restTemplate.postForObject(CREATE_API, userCreateDTO, UserDTO.class);
     }
 
-    public JwtDTO loginUser(UserAuthDTO userAuthRequest) {
+    public JwtDTO loginUser(UserAuthDTO userAuthRequest) throws AuthenticationException {
         String username = userAuthRequest.getUsername();
         String password = userAuthRequest.getPassword();
         Authentication authenticate = authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(username, password));
         if (authenticate.isAuthenticated()) {
-            String jwt = JwtUtil.createToken(
-                    userAuthRequest.getUsername(),
-                    Collections.emptyMap(),
-                    configProps.getExpirationInMillis(),
-                    configProps.getSecret()
+            UserDetailsImpl userDetails = (UserDetailsImpl) authenticate.getPrincipal();
+            Map<String, Object> claims = Map.of(
+                    "role", userDetails.getUserDTO().getRole().name(),
+                    "uid", userDetails.getUserDTO().getId()
             );
-            return new JwtDTO(jwt);
+            String jwt = jwtResolverExtService.generateToken(claims, userDetails);
+            return new JwtDTO(jwt, userDetails.getUserDTO().getRole());
         }
         throw new AuthenticationException("Cannot authenticate user");
     }
